--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body> 
+    <ul>
+        <li>Today's To Do</li>
+        <li>Add to your list...</li>
+        <li>wash the dishes</li>
+        <li>complete the dishes</li>
+        <li>complete To Do list project</li>
+    </ul>
    <script src="dist/main.js"></script> 
 </body>
 </html>
