--- a/src/template.html
+++ b/src/template.html
@@ -7,12 +7,12 @@
     <title>Document</title>
 </head>
 <body> 
-    <ul>
-        <li>Today's To Do</li>
-        <li>Add to your list...</li>
-        <li>wash the dishes</li>
-        <li>complete the dishes</li>
-        <li>complete To Do list project</li>
+    <ul class="cardlist_main">
+        <li class="cardlist--sub">Today's To Do</li>
+        <li class="cardlist--sub">Add to your list...</li>
+        <li class="cardlist--sub">wash the dishes</li>
+        <li class="cardlist--sub">complete the dishes</li>
+        <li class="cardlist--sub">complete To Do list project</li>
     </ul>
    <script src="dist/main.js"></script> 
 </body>
