Style list with css grids and add class in html

--- a/src/template.html
+++ b/src/template.html
@@ -7,13 +7,15 @@
     <title>Document</title>
 </head>
 <body> 
-    <ul class="cardlist_main">
-        <li class="cardlist--sub">Today's To Do</li>
-        <li class="cardlist--sub">Add to your list...</li>
-        <li class="cardlist--sub">wash the dishes</li>
-        <li class="cardlist--sub">complete the dishes</li>
-        <li class="cardlist--sub">complete To Do list project</li>
-    </ul>
+    <div class="grid-container">
+        <ul class="cardlist_main">
+            <li class="cardlist--sub">Today's To Do</li>
+            <li class="cardlist--sub">Add to your list...</li>
+            <li class="cardlist--sub">wash the dishes</li>
+            <li class="cardlist--sub">complete the dishes</li>
+            <li class="cardlist--sub">complete To Do list project</li>
+        </ul>
+    </div>
    <script src="dist/main.js"></script> 
 </body>
 </html>
