Position elements and add font size and weight

--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
     <div class="grid-container">
         <ul class="cardlist_main">
             <li class="cardlist--sub">Today's To Do</li>
-            <li class="cardlist--sub">Add to your list...</li>
+            <li class="cardlist--sub input"><input type="text" placeholder="Add to your list..."></li>
             <li class="cardlist--sub">wash the dishes</li>
             <li class="cardlist--sub">complete the dishes</li>
             <li class="cardlist--sub">complete To Do list project</li>
