Fix spacing issues in html

--- a/src/template.html
+++ b/src/template.html
@@ -8,10 +8,7 @@
 </head>
 <body> 
     <div class="grid-container">
-        <ul class="cardlist_main">
-            
-            
-        </ul>
+        <ul class="cardlist_main"></ul>
     </div>
    <script src="dist/main.js"></script> 
 </body>
