--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body> 
+    <h1>Hello World</h1>
     <div class="grid-container">
         <ul class="cardlist_main"></ul>
     </div>
